--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,10 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{> homeBody}}
+<div class="home-container">
+<div class="home-links">
+<h2 class="home">Movies Celebrities Lab</h2>
+  <a href="/all-celebrities">See celebrities</a>
+  <a href="/all-movies">See movies</a>
+  <a href="/celebrities/create">Create a Celebrity</a>
+  <a href="/movies/create">Create a movie</a>
+</div>
+</div>
